src/test/ui/error-codes/E0297.stderr
error[E0005]: refutable pattern in `for` loop binding: `None` not covered
  --> $DIR/E0297.rs:14:9
   |
14 |     for Some(x) in xs {}
   |         ^^^^^^^ pattern `None` not covered

error: aborting due to previous error

If you want more information on this error, try using "rustc --explain E0005"
